--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+### IntelliJ ###
+.idea/*
+!.idea/runConfigurations
+!.idea/dataSources.xml
+!.idea/vcs.xml
+!.idea/webServers.xml
+!.idea/databaseColors.xml
 *.iws
 *.iml
 *.ipr
@@ -20,6 +22,9 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
+# Maven
+target
 
 ### NetBeans ###
 /nbproject/private/
